<resources>
    <string name="app_name">QuizEditor</string>

    <!-- icon descriptions -->
    <string name="ic_desc_app_icon">App Icon</string>
    <string name="ic_desc_back">Cofnij</string>
    <string name="content_desc_category_color">Kolor kategorii</string>
    <string name="ic_desc_close">Zamknij</string>
    <string name="ic_desc_edit">Edytuj</string>
    <string name="ic_desc_add">Dodaj nowy</string>
    <string name="ic_desc_scroll_to_top">Wróć do góry</string>

    <!-- buttons -->
    <string name="button_save">Dodaj</string>
    <string name="button_edit">Edytuj</string>
    <string name="button_back">Wróć</string>
    <string name="button_ok">OK</string>

    <string name="text_placeholder_short">Placeholder</string>
    <string name="text_placeholder_long">A bit longer placeholder for a fields that can store more content</string>
    <string name="text_placeholder_number">123</string>
    <string name="ic_desc_delete">Usuń</string>
    <string name="ic_desc_search">Szukaj</string>
    <string name="ic_desc_submit">Zatwierdź</string>
    <string name="ic_desc_filter">Filtruj</string>
    <string name="ic_desc_sort">Sortuj</string>

    <string name="error_unknown">Nieznany błąd.</string>
    <string name="error_no_data">Nie znaleziono danych.</string>
    <string name="error_not_found_category">Nie znaleziono kategorii o podanym id.</string>
    <string name="error_not_found_question">Nie znaleziono pytania o podanym id.</string>

    <string name="sort_by_label">Sortuj po</string>
    <string name="sort_type_label">Kolejność</string>
    <string name="label_no_elements_to_show">Brak elementów do wyświetlenia.</string>
    <string name="label_no_elements_guide_part1">Kliknij</string>
    <string name="label_no_elements_guide_part2">by dodać pierwszy element!</string>

    <string name="label_created_on">Utworzono</string>
    <string name="label_created_by">przez</string>

    <string name="ic_desc_nav_drawer">Panel Nawigacji</string>

    <string name="elements_count_label_singular">element</string>
    <string name="elements_count_label_few">elementy</string>
        <string name="elements_count_label_many">elementów</string>
    
        <string name="label_category_questions_amount_singular">pytanie</string>
        <string name="label_category_questions_amount_few">pytania</string>
                <string name="label_category_questions_amount_many">pytań</string>
            
                <string name="label_category_subcategories_amount_singular">podkategoria</string>
                <string name="label_category_subcategories_amount_few">podkategorie</string>
                <string name="label_category_subcategories_amount_many">podkategorii</string>
            
                <string name="label_answers_count_one">odpowiedź</string>
            
            <string name="label_answers_count_many">odpowiedzi</string>
            <string name="ic_desc_validation_ok">Status walidacji</string>
            <string name="question_validation_ok">OK</string>
            <string name="question_validation_missing_answers">Brak odpowiedzi</string>
            <string name="question_validation_no_correct_answer">Brak poprawnej odpowiedzi</string>
        
            <string name="ic_desc_notification_icon">Powiadomienie</string>
        
            <string name="status_draft">SZKIC</string>
        <string name="status_in_progress">W TRAKCIE</string>
        <string name="status_done">GOTOWE</string>
        <string name="status_approved">ZATWIERDZONE</string>
        <string name="status_need_rework">WYMAGA ZMIAN</string>
    
        <string name="label_category_details">Kategoria</string>
    <string name="label_category_title">Tytuł</string>
    <string name="label_category_desc">Opis</string>
    <string name="label_category_status">Status</string>
    <string name="label_category_color">Kolor</string>
    <string name="label_category_color_preview">KOLOR</string>
    <string name="label_category_questions_section">Pytania w tej kategorii</string>
    <string name="label_category_subcategories_section">Podkategorie</string>

    <string name="hint_category_title">Nazwa kategorii</string>
    <string name="hint_category_desc">Opis…</string>

    <string name="button_change_color">Zmień kolor</string>
    <string name="button_change_status">Zmień status</string>
    <string name="button_add_new_question">Nowe pytanie</string>
    <string name="button_add_question_from_database">Dodaj z bazy</string>
    <string name="btn_category_questions">Pytania</string>
    <string name="btn_category_subcategories">Podkategorie</string>

    <string name="label_explanation">Wyjaśnienie</string>
    <string name="hint_explanation">Dodaj opcjonalne wyjaśnienie…</string>

    <string name="label_question">Pytanie</string>
    <string name="hint_question_text">Tekst pytania</string>
    <string name="label_answers">odpowiedzi</string>
    <string name="label_no_categories">Brak kategorii</string>

    <string name="label_correct_answer">Poprawna</string>
    <string name="label_incorrect_answer">Błędna</string>
    <string name="label_correct_answers">poprawnych</string>
    <string name="hint_answer">Dodaj odpowiedź</string>

    <string name="drawer_menu_title_cem">Tryb CEM</string>
            <string name="bottom_bar_title_hierarchy">Hierarchia</string>
        
            <!-- Migration System -->
            <string name="title_migration">Migracja danych</string>
            <string name="section_migration_details">Szczegóły migracji</string>
            <string name="text_migrate_from">Migruj z:</string>
            <string name="picker_migrate_to">Migruj do:</string>
            <string name="button_migrate">MIGRUJ</string>
            <string name="button_cancel">ANULUJ</string>
            <string name="section_selected_category">Wybrany element</string>
            <string name="section_migration_history">Historia migracji</string>
            <string name="text_no_migration_history">Brak historii migracji</string>
            <string name="text_performed_by">Wykonane przez:</string>
            <string name="text_items_count">Liczba elementów:</string>
            <string name="text_questions_count">Pytania:</string>
            <string name="text_subcategories_count">Subkategorie:</string>
            <string name="button_migrate_all">PRZENIEŚ WSZYSTKO</string>
            <string name="alert_title_migration_declined">Migracja odrzucona</string>
            <string name="message_migration_declined">Nie masz uprawnień do wykonania migracji.</string>
            <string name="guidance_failed_to_migrate_category">Migracja kategorii nie powiodła się. Spróbuj ponownie.</string>
            <string name="guidance_failed_to_migrate_swipe">Migracja pytań Swipe nie powiodła się. Spróbuj ponownie.</string>
            <string name="guidance_failed_to_migrate_translations">Migracja tłumaczeń nie powiodła się. Spróbuj ponownie.</string>
                <string name="guidance_failed_to_migrate_cem_category">Migracja kategorii CEM nie powiodła się. Spróbuj ponownie.</string>
            
                <!-- Production Sync -->
                <string name="label_last_production_migration">Ostatnia migracja na Produkcję:</string>
                <string name="status_up_to_date">AKTUALNA</string>
                <string name="status_needs_update">WYMAGA AKTUALIZACJI</string>
                <string name="text_never">Nigdy</string>
            </resources>