<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/button_close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ic_desc_close"
        android:src="@drawable/ic_close_24"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/title"
        style="@style/QuizEditorLabelMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone" />

    <View
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/button_migrate"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/title_migration"
        android:src="@drawable/ic_migrate_24"
        android:visibility="gone"
        app:tint="@color/orange_primary" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/button_save" />
</LinearLayout>