<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/count_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:text="@string/text_placeholder_number"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_all_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_answers"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/count_answers"
        app:layout_constraintTop_toTopOf="@id/count_answers"
        app:layout_constraintBottom_toBottomOf="@id/count_answers"/>

    <TextView
        android:id="@+id/count_correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="3dp"
        android:text="@string/text_placeholder_number"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/count_answers"
        app:layout_constraintBottom_toBottomOf="@id/count_answers"/>

    <TextView
        android:id="@+id/tv_correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_correct_answers"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/count_correct_answers"
        app:layout_constraintTop_toTopOf="@id/count_answers"
        app:layout_constraintBottom_toBottomOf="@id/count_answers"/>
</androidx.constraintlayout.widget.ConstraintLayout>