<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_tile"
    android:layout_margin="15dp"
    android:padding="15dp">

    <ImageView
        android:id="@+id/iv_notification_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_chat_unread_24"
        android:contentDescription="@string/ic_desc_notification_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/primary" />

    <ProgressBar
        android:id="@+id/pb_notification_timer"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:indeterminate="false"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/determined_progress_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_notification_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder_short"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_notification_icon"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pb_notification_timer"/>

    <TextView
        android:id="@+id/tv_notification_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder_long"
        app:layout_constraintStart_toStartOf="@id/tv_notification_title"
        app:layout_constraintTop_toBottomOf="@id/tv_notification_title"
        app:layout_constraintEnd_toEndOf="@id/tv_notification_title"/>







</androidx.constraintlayout.widget.ConstraintLayout>