<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_tile"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:elevation="5dp">

    <View
        android:id="@+id/color_preview"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_category_color"
        android:layout_marginHorizontal="@dimen/tile_rounded_corner_radius" />

    <TextView
        android:id="@+id/label_category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder_short"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/color_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_sync_status"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"/>

    <ImageView
        android:id="@+id/iv_sync_status"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_warning_amber_24"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/label_category_title"
        app:layout_constraintBottom_toBottomOf="@id/label_category_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:contentDescription=""
        app:tint="@color/orange_primary"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/label_category_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/text_placeholder_long"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/label_category_title"
        app:layout_constraintTop_toBottomOf="@id/label_category_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@id/color_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_category_description" />

    <LinearLayout
        android:id="@+id/container_category_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/category_status">

        <TextView
            android:id="@+id/category_questions_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder_number"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_category_questions_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/label_category_questions_amount_singular"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/label_stats_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="6dp"
            android:text="|"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/category_subcategories_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder_number"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/label_category_subcategories_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/label_category_subcategories_amount_many"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>

    <com.rafalskrzypczyk.core.custom_views.ColorOutlinedLabelView
        android:id="@+id/category_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/container_category_stats"
        app:layout_constraintTop_toTopOf="@+id/container_category_stats"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="7dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
